0.42 2019-10-15
  - add where option new syntax support for join clause

    # (3) Array reference[where clause, parameters, join(optional)]
    where => [
      ['and', ':author{=}', ':title{like}'],
      {author => 'Ken', title => '%Perl%'},
      ["left outer join table2 on table1.key1 = table2.key1"]
    ]
  - Search table names in select method's append option
0.41 2017-11-07
  - fix connect method bug that password can't be specified.
0.40 2017-03-30
  - improve performance of DBIx::Custom::Query::bind method
0.39 2017-03-28
  ---------------------------------------------------
  NOTE: This release add some DEPRECATED warnings.
  Maybe after these DEPRECATED period, DBIx::Custom will be more stable.
  ---------------------------------------------------
  - DBIx::Custom::helper method is DEPRECATED!
  - DBIx::Custom AUTOLOAD feature is DEPRECATED!
  - DBIx::Custom::update_or_insert method is DEPRECATED!
  - DBIx::Custom::count method is DEPRECATED!
  - DBIx::Custom::insert, select,update,delete method's id option is DEPRECATED!
  - DBIx::Custom::insert, select,update,delete method's primary_key option is DEPRECATED!
  - DBIx::Custom::Model AUTOLOAD feature is DEPRECATED!
  - DBIx::Custom::Model::helper method is DEPRECATED!
  - DBIx::Custom::Model::update_or_insert method is DEPRECATED!
  - DBIx::Custom::Model::count method is DEPRECATED!
  - DBIx::Custom::Model::primary_key attribute is DEPRECATED!
  - DBIx::Custom::setup method is DEPRECATED!
    this method has no meaning because
    columns is automatically set when create_model or include_model is called.
  ------------------------
  Performance down
  ------------------------
  - DBIx::Custom::insert method which have array argument(For example, [{foo => 1, bar => 2}, {foo => 3, bar => 4}])
    become slow. (Performance down 1)
  - DBIx::Custom::execute method's reuse option become no more meaning. (Performance down 2)
  
  You can resolve above two problem by using query option